<resources>
    <string name="app_name">Calcula Numeros</string>
    <string name="botaoSomar">Somar</string>
    <string name="botaoDividir">Dividir</string>
    <string name="botaoMultiplicar">Multiplicar</string>
    <string name="botaoSubtrair">Subtrair</string>
    <string name="total_label">Total</string>
    <string name="numero1">Digite um número</string>
    <string name="numero2">Digite um número</string>
    <string name="n_mero_1_label">Número 1:</string>
    <string name="soma_n_meros_label">Soma Números</string>
    <string name="n_mero_2_label">Número 2:</string>
</resources>